Criando rota na doc
