# docs/swagger.json
@@ -10,5 +10,62 @@
         "version": "v0.0.1"
     },
     "basePath": "/",
-    "paths": {}
+    "paths": {
+        "/finances": {
+            "get": {
+                "description": "Get finances",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "finances"
+                ],
+                "summary": "Get finances",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/handlers.OutputGetFinances"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.OutputGetFinancesFailure"
+                        }
+                    }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "handlers.OutputGetFinances": {
+            "type": "object",
+            "properties": {
+                "amount": {
+                    "type": "number"
+                },
+                "date": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
+                }
+            }
+        },
+        "handlers.OutputGetFinancesFailure": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "integer"
+                }
+            }
+        }
+    }
 }
