# internal/infra/webserver/handlers/finance_handlers.go
@@ -11,11 +11,26 @@ type OutputGetFinances struct {
 	Status string  `json:"status"`
 }
 
+type OutputGetFinancesFailure struct {
+	Message string `json:"message"`
+	Status  int    `json:"status"`
+}
+
+// Get user finances
+// @Summary Get finances
+// @Description Get finances
+// @Tags finances
+// @Produce json
+// @Success 200 {object} []OutputGetFinances
+// @Failure 500 {object} OutputGetFinancesFailure
+// @Router /finances [get]
 func GetFinances(w http.ResponseWriter, r *http.Request) {
-	output := OutputGetFinances{
-		Amount: 200.02,
-		Date:   "2024-01-01",
-		Status: "Approved",
+	output := []OutputGetFinances{
+		{
+			Amount: 200.02,
+			Date:   "2024-01-01",
+			Status: "Approved",
+		},
 	}
 	json.NewEncoder(w).Encode(&output)
 }
